--- a/engine/view/client.ejs
+++ b/engine/view/client.ejs
@@ -292,7 +292,10 @@
             </span>
             <a class="green" href="#" id="fullscreen" onclick="toggleFullscreen();">Go Fullscreen</a> |
             <a class="green" href="#" id="screenshot" onclick="saveScreenshot();">Take screenshot</a> |
-            <a class="green" href="#" id="hide" onclick="hideControls();">Hide controls</a>
+            <a class="green" href="#" id="hide" onclick="hideControls();">Hide controls</a> |
+            <a class="green" href="/hiscores">Hiscores</a> |
+            <a class="green" href="https://discord.gg/3DcuU5cMJN" target="_blank">Discord</a> |
+            <a class="green" href="https://github.com/MaxBittker/rs-sdk" target="_blank">GitHub</a>
         </div>
         <div id="hide-message" style="display: none;">
             <p class="green blink">Controls have been hidden press ctrl+alt+i to unhide.</p>
